feat: contract first config working
