# driving/adapter-rest/src/main/java/com/bcnc/prueba/application/adapter/api/EchoApi.java
@@ -1,17 +1,0 @@
-package com.bcnc.prueba.application.adapter.api;
-
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-
-@Tag(name = "EchoApi" , description = "API testeo CICD")
-@RequestMapping("/api/v1")
-public interface EchoApi {
-
-    @Operation(summary = "Te saluda.")
-    @GetMapping("/echo")
-    ResponseEntity<String> greetings();
-
-}
